--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,10 +1,10 @@
 .image-wrapper > img {
- width: 250px;
+ width: auto;
  height: auto;
  border-radius: 8px;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     .image-wrapper > img {
         width: 350px;
         height: 350px;
@@ -16,4 +16,4 @@
         width: 500px;
         height: 500px;
        }
-}
+} */
