--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,12 @@ body {
   background: #F1F1F1;
 }
 
+@layer components {
+  .input {
+    @apply w-full text-sm p-4 border border-[rgb(207,207,207)] rounded-lg;
+  }
+}
+
 #nprogress .bar {
   background:  #e33f3f !important;
   height: 4px !important;
